hifiberry-configurator (1.8.0) stable; urgency=medium

  * Added systeminfo.py module for collecting system information
  * Provides Pi model, HAT vendor/product, and system UUID information
  * Added /api/v1/systeminfo REST API endpoint for programmatic access
  * Command-line tool supports both simple text and JSON output formats
  * Reads system UUID from /etc/uuid file when available
  * Updated API documentation to include new systeminfo endpoint
  * Removed contact email references from documentation

 -- HiFiBerry Support <support@hifiberry.com>  Thu, 17 Jul 2025 19:30:00 +0000

hifiberry-configurator (1.7.0) stable; urgency=medium

  * Added system-wide IPv6 enable/disable functionality to config-network
  * IPv6 settings now persist across reboots using multiple configuration layers
  * Uses cmdline.txt for kernel parameters (Raspberry Pi compatible)
  * Configures sysctl settings and NetworkManager connections for 
    comprehensive IPv6 control
  * Added --enable-ipv6 and --disable-ipv6 command-line options
  * Enhanced cmdline.py with IPv6 kernel parameter management methods
  * Added comprehensive manual pages for all configuration tools
  * Manual pages installed to /usr/share/man/man1/ for system-wide access
  * Implemented REST API server for programmatic configuration access
  * API server provides HTTP endpoints for ConfigDB CRUD operations
  * Added systemd service for automatic API server startup on port 1081
  * Created config-server command with comprehensive manual page
  * Added comprehensive API documentation with HTML and OpenAPI formats
  * API server automatically enabled and started upon package installation

 -- HiFiBerry Support <support@hifiberry.com>  Thu, 17 Jul 2025 12:00:00 +0000

hifiberry-configurator (1.6.7) stable; urgency=medium

  * Added config-avahi command to configure Avahi daemon for physical 
    interfaces only
  * Restricts Avahi advertising to eth* and wlan* interfaces, excluding 
    virtual interfaces